--- a/VUserInterface/VUserInterface.csproj
+++ b/VUserInterface/VUserInterface.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\VBusiness\VBusiness.csproj" />
-    <ProjectReference Include="..\VEnitity\VModel.csproj" />
+    <ProjectReference Include="..\VEnitity\VEntityFramework.csproj" />
   </ItemGroup>
 
 </Project>
