--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ASF Planner\ASFLauncher.csproj" />
+    <ProjectReference Include="..\StarCodeDecryptor\StarCodeDecryptor.csproj" />
     <ProjectReference Include="..\VBusiness\VBusiness.csproj" />
     <ProjectReference Include="..\VEnitity\VEntityFramework.csproj" />
     <ProjectReference Include="..\VUserInterface\VUserInterface.csproj" />
