--- a/VBusiness/VBusiness.csproj
+++ b/VBusiness/VBusiness.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StarCodeDecryptor\StarCodeDecryptor.csproj" />
     <ProjectReference Include="..\VEnitity\VEntityFramework.csproj" />
   </ItemGroup>
 
