--- a/VUserInterface/VUserInterface.csproj
+++ b/VUserInterface/VUserInterface.csproj
@@ -8,7 +8,7 @@
     <ProjectReference Include="..\VEnitity\VEntityFramework.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="LoadoutConfigurationControl.cs">
+    <Compile Update="LoadoutIncomeControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
