Add Build Date to settings to give some semblance of a version #

--- a/VEnitity/VEntityFramework.csproj
+++ b/VEnitity/VEntityFramework.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+      <AssemblyVersion>1.0.*</AssemblyVersion>
+      <Deterministic>false</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
