--- a/ASF Planner/ASFLauncher.csproj
+++ b/ASF Planner/ASFLauncher.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <PackageIcon>asflogo.ico</PackageIcon>
     <ApplicationIcon>asflogo.ico</ApplicationIcon>
+    <StartupObject>ASFLauncher.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
