--- a/.editorconfig
+++ b/.editorconfig
@@ -123,3 +123,4 @@ dotnet_style_qualification_for_method = false:suggestion
 dotnet_style_qualification_for_property = false:suggestion
 
 dotnet_diagnostic.IDE0057.severity=none
+dotnet_diagnostic.IDE0040.severity=none
